# mathematical-operations-on-large-numbers

./: CMakeLists.txt  start_compile_and_run_test.sh
src/: CMakeLists.txt  addition.cpp  addition.h  addition_operation_with_sign.cpp  addition_operation_with_sign.h  addition_operation_without_sign.cpp  addition_operation_without_sign.h  main.cpp  mathematical_operations_template.h  performs_mathematical_operations.cpp  performs_mathematical_operations.h  subtraction.cpp  subtraction.h  subtraction_operation_with_sign.cpp  subtraction_operation_with_sign.h  subtraction_operation_without_sign.cpp  subtraction_operation_without_sign.h
test/: .CMakeLists.txt.swp  .test.cpp.swp  CMakeLists.txt  test.cpp
